@@ -1,6 +1,11 @@
 Changelog for netappConfigMaker
 ===============================
 
+Changes from version v1.5.2 to V1.5.0, 20130531
+-----------------------------------------------
+fixing path probleme of template file
+
+
 Changes from version v1.5.0 to V1.1.0, 20130531 
 -----------------------------------------------
 - moving from static .config and .rc layout to cheetah template to allow modification of the layout and comment add in .rc and .config output
